working example of MVT

--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -1,5 +1,6 @@
-{% extends 'base_layout.hmtl' %}
+{% extends 'ade/base_layout.html' %}
 
 {% block navbar %}
 <h1>Navbar goes here</h1>
+<h3>{{ message }}</h3>
 {% endblock %}
