added side navbar

--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -3,9 +3,15 @@
 <html>
     <head>
         <title></title>
+        <script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href="{% static 'css/ade.css' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 
+        
     </head>
 
     <body>
@@ -13,10 +19,21 @@
         
         {% endblock %}
 
-        <script
-        src="https://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
+        {% block bodycontent %}
+
+        
+        {% endblock %}
+
+
+
+        <script>
+            $('#toggle').on('click', function(){
+                $('.ui.sidebar').sidebar('toggle');
+            });
+
+        </script>
+
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
     </body>
 </html>
