--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -10,17 +10,105 @@
 
         <link rel="stylesheet" href="{% static 'css/ade.css' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
+        
+        <style>
+       
+
+        .main-carousel{
+            width: 100%;
+        }
+
+        .main-carousel img {
+        display: block;
+        width:100%;
+        height: 500px;
+        }
+
+        .carousel-cell{
+        display: block;
+        width:100%;
+        height: 500px;
+        }
+
+        #header-title{
+            color: #fff;
+        }
 
         
+        .carousel-content{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        color: #fff;
+        transform: translate(-50%, -50%);
+        z-index: 20; /*enables text in front of image */
+        color: white;
+        text-shadow: 0 1px 2px rgba(0,0,0,.6);
+        }
+
+        /* big buttons, no circle */
+        .flickity-prev-next-button {
+        width: 100px;
+        height: 100px;
+        background: transparent;
+        }
+        /* arrow color */
+        .flickity-prev-next-button .arrow {
+        fill: white;
+        }
+        .flickity-prev-next-button.no-svg {
+        color: white;
+        }
+        .flickity-prev-next-button:hover {
+        background: transparent;
+        }
+        /* hide disabled button */
+        .flickity-prev-next-button:disabled {
+        display: none;
+        }
+
+        /* position dots in gallery */
+        .flickity-page-dots {
+        bottom: 5px;
+        }
+        /* white circles */
+        .flickity-page-dots .dot {
+        width: 12px;
+        height: 12px;
+        opacity: 1;
+        background: transparent;
+        border: 2px solid white;
+        }
+        /* fill-in selected dot */
+        .flickity-page-dots .dot.is-selected {
+        background: white;
+        }
+
+
+
+        @media screen and ( min-width: 768px ) {
+        .carousel img {
+            height: 400px;
+        }
+        }
+        </style>
+
+  
+
     </head>
 
     <body>
+        
         {% block navbar %}
         
         {% endblock %}
 
-        {% block bodycontent %}
+       
 
+
+        {% block content %}
         
         {% endblock %}
 
@@ -31,9 +119,18 @@
                 $('.ui.sidebar').sidebar('toggle');
             });
 
+           /* $('.main-carousel').flickity({
+            // options
+                cellAlign: 'left',
+                contain: true
+                
+            });*/
+
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+        <!-- JavaScript -->
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     </body>
 </html>
