--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -1,26 +1,130 @@
 {% extends 'ade/base_layout.html' %}
 
+
+<!-- Navigation bar -->
 {% block navbar %}
-<!--<h3>{{ message }}</h3>-->
 
-
-<div class="ui top attached demo menu">    
-    <a id="toggle" class="item">
-        <i id="sidebar-icon" class="sidebar icon"></i>
-          Menu
-    </a>
-    <h1 class="ui right aligned header" style="margin-left: auto; margin-right: auto">ADE LUXURY WEAR</h1> 
-
+<div class="ui inverted demo menu attached" style="margin-bottom: 0">  
+    <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i>Menu</a>
+    <h1 id="header-title" class="ui right aligned header" style="margin-left: auto; margin-right: auto; padding-bottom: 20px">ADE LUXURY WEAR</h1> 
 </div>
-<div class="ui bottom attached segment pushable">
+
+<div class="ui pushable">
     <div class="ui inverted labeled icon left inline vertical sidebar menu">
         <a class="item"> Home </a>
         <a class="item"> Collections </a>
         <a class="item"> About </a>
         <a class="item"> Contact </a>
     </div>
-</div>
+    
+{% endblock %}
+
+{% block content %}
+
+<!-- Body -->
+
+    <div class="grid">
+        <!-- Carousel will go here -->
+        <div class="main-carousel"  data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
+            <div class="carousel-cell">
+                <img src="https://wallpapercave.com/wp/T6yypye.jpg" alt="orange tree" />
+                
+                <div class="carousel-content">
+                    <h1>Experience the way it truly feels to look like royalty. </h1>
+                    <button class="ui huge inverted standard button" style="margin-right: auto; margin-left: auto">SHOP NOW</button>
+                </div>
+
+            </div>
+
+            <div class="carousel-cell">
+                <img src="https://www.wallpaperup.com/uploads/wallpapers/2014/01/02/213088/5642d8929f9aeca4c83c6808dbc75a42.jpg" alt="submerged" />
+
+                <div class="carousel-content">
+                    <button class="ui huge inverted standard button">SHOP NOW</button>                
+                </div>
+    
+            </div>
+
+            <div class="carousel-cell">
+                <img src="https://coolbackgrounds.io/images/backgrounds/compute-83062381.png"  alt="look-out" />
+                
+                <div class="carousel-content">
+                    <h1>SEE LIKE ROYALTY, FEEL LIKE ROYALTY</h1>
+                    <button class="ui huge inverted standard button">SHOP NOW</button>
+                </div>
+    
+            </div>
+            
+        </div><!-- End carousel -->
+
+        <div class="ui grid" style="margin-top:20px; ">
+           
+
+                <div class="four wide column">
+                    <img class="ui small centered circular  image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
+ 
+
+                <div class="four wide column">
+                    <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                    <div class="ui center aligned basic segment">
+                        KINGS LINE<br><br>
+                        $75.00
+                    </div>
+                </div>
+
+                <div class="four wide column">
+                    <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                    <div class="ui center aligned basic segment">
+                        QUEENS LINE<br><br>
+                        $65.00
+                    </div>
+                </div>
+
+                <div class="four wide column">
+                    <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                    <div class="ui center aligned basic segment">
+                        UNISEX LINE<br><br>
+                        $70.00
+                    </div>
+                </div>
+
+        </div>
+
+        
+
+
+
+        
+
+        <!--<div class="row">
+            <div class="column"><img src="http://cdn.perfectwallpaper.co/i/originals/55/45/A5kRtL-solid-dark-grey-wallpaper.jpg" style="width:100%; height:500px; margin-top:0"></div>
+        </div>  -->
+
+    </div>
+          
+
+
+
+</div> 
 
 {% endblock %}
+
+
+
+
+
+
+      
+      
+
+
+
+     
+
 
 
