--- a/adeluxuryeyewear/about/templates/about/base_layout.html
+++ b/adeluxuryeyewear/about/templates/about/base_layout.html
@@ -34,6 +34,9 @@
         {% block content %}
         {% endblock %}
 
+        {% block footer %}
+        {% endblock %}
+
         <script>
             $('#toggle').on('click', function(){
                 $('.ui.sidebar').sidebar('toggle');
