--- a/adeluxuryeyewear/about/templates/about/about_ade.html
+++ b/adeluxuryeyewear/about/templates/about/about_ade.html
@@ -1,4 +1,4 @@
-{% extends 'about/base_layout.html' %}
+{% extends 'ade/base_layout.html' %}
 {% load static %}
 
 {% block title %}
@@ -7,6 +7,7 @@ About us | ADE
 
 {% block content %}
 
+<div class="pusher">
 <div class="ui container">
     <div class="ui two column centered stackable grid">
         <div class="column">
@@ -56,4 +57,5 @@ About us | ADE
     </div>
 </div>
 
+</div>
 {% endblock %}
