--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -7,115 +7,14 @@
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
-
-        <link rel="stylesheet" href="{% static 'css/ade.css' %}">
+        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-        <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
-        
-        <style>
-       
-       html{
-           
-           overflow-y: hidden;
-       }
-
-       .no-scrollbar{
-           overflow-y: hidden;
-       }
-      
-
-        .main-carousel{
-            width: 100%;
-        }
-
-        .main-carousel img {
-        display: block;
-        width:100%;
-        height: 500px;
-        }
-
-        .carousel-cell{
-        display: block;
-        width:100%;
-        height: 500px;
-        }
-
-        #header-title{
-            color: #fff;
-        }
-
-        .center-text{
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-
-        
-        .carousel-content{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        color: #fff;
-        transform: translate(-50%, -50%);
-        z-index: 20; /*enables text in front of image */
-        color: white;
-        text-shadow: 0 1px 2px rgba(0,0,0,.6);
-        }
-
-        /* big buttons, no circle */
-        .flickity-prev-next-button {
-        width: 100px;
-        height: 100px;
-        background: transparent;
-        }
-        /* arrow color */
-        .flickity-prev-next-button .arrow {
-        fill: white;
-        }
-        .flickity-prev-next-button.no-svg {
-        color: white;
-        }
-        .flickity-prev-next-button:hover {
-        background: transparent;
-        }
-        /* hide disabled button */
-        .flickity-prev-next-button:disabled {
-        display: none;
-        }
-
-        /* position dots in gallery */
-        .flickity-page-dots {
-        bottom: 5px;
-        }
-        /* white circles */
-        .flickity-page-dots .dot {
-        width: 12px;
-        height: 12px;
-        opacity: 1;
-        background: transparent;
-        border: 2px solid white;
-        }
-        /* fill-in selected dot */
-        .flickity-page-dots .dot.is-selected {
-        background: white;
-        }
-
-
-
-        @media screen and ( min-width: 768px ) {
-        .carousel img {
-            height: 400px;
-        }
-        }
-        </style>
-
-  
-
+        <link rel="stylesheet" href="{% static 'css/ade.css' %}">
     </head>
 
-    <body class="index pushable">
-        
+    <body class="pushable"> 
+
         <!-- Navigation -->
         <div class="ui sidebar vertical left inverted menu">
             <a class="item"> Home </a>
@@ -137,35 +36,23 @@
         
         <div class="ui inverted icon top fixed menu" style="background-color: #000">
             <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
-            <h1 id="header-title" class="center-text">ADE LUXURY WEAR</h1>
+            <h1 class="center-text white">ADE LUXURY WEAR</h1>
         </div>
 
         <!-- End Navigation -->
-            
-                
-            
-                    
-
-       
-
 
         {% block content %}
         
         {% endblock %}
 
 
-
+        
+    
+        <!-- Toggles sidebar -->
         <script>
             $('#toggle').on('click', function(){
                 $('.ui.sidebar').sidebar('toggle');
             });
-
-           /* $('.main-carousel').flickity({
-            // options
-                cellAlign: 'left',
-                contain: true
-                
-            });*/
 
         </script>
 
