added footer, needs more work; need to make this all mobile responsive as well

--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -3,117 +3,130 @@
 
 
 <!-- Body -->
-{% block content %}<div class="pusher"><!-- Similar to container to see all page -->
-<div class="grid">
-    <!-- Carousel will go here -->
-    <div class="main-carousel"  data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
-        <div class="carousel-cell">
-            <img src="https://wallpapercave.com/wp/T6yypye.jpg" alt="orange tree" />
+{% block content %}
+<div class="pusher"><!-- Similar to container to see all page -->
+        <!-- Carousel will go here -->
+        <div class="main-carousel"  data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
+            <div class="carousel-cell">
+                <img src="https://wallpapercave.com/wp/T6yypye.jpg" alt="orange tree" />
+                
+                <div class="carousel-content">
+                    <h1>Experience the way it truly feels to look like royalty. </h1>
+                    <button class="ui huge inverted standard button" style="margin-right: auto; margin-left: auto">SHOP NOW</button>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <img src="https://www.wallpaperup.com/uploads/wallpapers/2014/01/02/213088/5642d8929f9aeca4c83c6808dbc75a42.jpg" alt="submerged" />
+
+                <div class="carousel-content">
+                    <button class="ui huge inverted standard button">SHOP NOW</button>                
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <img src="https://coolbackgrounds.io/images/backgrounds/compute-83062381.png"  alt="look-out" />
+                
+                <div class="carousel-content">
+                    <h1>SEE LIKE ROYALTY, FEEL LIKE ROYALTY</h1>
+                    <button class="ui huge inverted standard button">SHOP NOW</button>
+                </div>
+            </div>
             
-            <div class="carousel-content">
-                <h1>Experience the way it truly feels to look like royalty. </h1>
-                <button class="ui huge inverted standard button" style="margin-right: auto; margin-left: auto">SHOP NOW</button>
+        </div><!-- End carousel -->
+        
+        <div class="ui grid container doubling stackable" style="margin-top:20px; ">
+        
+            <div class="four wide column">
+                <img class="ui small centered circular  image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    FEATURED COLLECTION<br><br>
+                    $70.00
+                </div>
             </div>
-        </div>
 
-        <div class="carousel-cell">
-            <img src="https://www.wallpaperup.com/uploads/wallpapers/2014/01/02/213088/5642d8929f9aeca4c83c6808dbc75a42.jpg" alt="submerged" />
 
-            <div class="carousel-content">
-                <button class="ui huge inverted standard button">SHOP NOW</button>                
+            <div class="four wide column">
+                <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    KINGS LINE<br><br>
+                    $75.00
+                </div>
             </div>
-        </div>
 
-        <div class="carousel-cell">
-            <img src="https://coolbackgrounds.io/images/backgrounds/compute-83062381.png"  alt="look-out" />
-            
-            <div class="carousel-content">
-                <h1>SEE LIKE ROYALTY, FEEL LIKE ROYALTY</h1>
-                <button class="ui huge inverted standard button">SHOP NOW</button>
+            <div class="four wide column">
+                <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    QUEENS LINE<br><br>
+                    $65.00
+                </div>
             </div>
+
+            <div class="four wide column">
+                <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    UNISEX LINE<br><br>
+                    $70.00
+                </div>
+            </div>
+
         </div>
         
-    </div><!-- End carousel -->
+        <div class="ui grid container doubling stackable" style="margin-top:20px; ">
+        
+            <div class="four wide column">
+                <img class="ui small centered circular  image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    FEATURED COLLECTION<br><br>
+                    $70.00
+                </div>
+            </div>
 
-    <div class="ui grid" style="margin-top:20px; ">
-    
-        <div class="four wide column">
-            <img class="ui small centered circular  image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                FEATURED COLLECTION<br><br>
-                $70.00
+
+            <div class="four wide column">
+                <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    KINGS LINE<br><br>
+                    $75.00
+                </div>
+            </div>
+
+            <div class="four wide column">
+                <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    QUEENS LINE<br><br>
+                    $65.00
+                </div>
+            </div>
+
+            <div class="four wide column">
+                <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
+                <div class="ui center aligned basic segment">
+                    UNISEX LINE<br><br>
+                    $70.00
+                </div>
+            </div>
+
+        </div><!-- End second row -->
+
+
+    <!-- Footer -->
+    <div class="ui vertical inverted footer segment">
+        <div class="ui center aligned container">
+            <div class="ui stackable grid">
+                <div class="eight wide column">
+                    <div class="ui celled horizontal list">
+                        <div class="item white"><a href="#"> About </a></div>
+                        <div class="item"><a href="#"> Contact </a></div>
+                        <div class="item"><a href="#"> Terms & Conditions </a></div>
+                        <div class="item"><a href="#"> Refund Policy </a></div>
+                        <div class="item"><a href="#"> Privacy Statement </a></div>
+
+                    </div>
+                </div>
             </div>
         </div>
-
-
-        <div class="four wide column">
-            <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                KINGS LINE<br><br>
-                $75.00
-            </div>
-        </div>
-
-        <div class="four wide column">
-            <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                QUEENS LINE<br><br>
-                $65.00
-            </div>
-        </div>
-
-        <div class="four wide column">
-            <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                UNISEX LINE<br><br>
-                $70.00
-            </div>
-        </div>
-
     </div>
-    
-    <div class="ui grid" style="margin-top:20px; ">
-    
-        <div class="four wide column">
-            <img class="ui small centered circular  image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                FEATURED COLLECTION<br><br>
-                $70.00
-            </div>
-        </div>
-
-
-        <div class="four wide column">
-            <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                KINGS LINE<br><br>
-                $75.00
-            </div>
-        </div>
-
-        <div class="four wide column">
-            <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                QUEENS LINE<br><br>
-                $65.00
-            </div>
-        </div>
-
-        <div class="four wide column">
-            <img class="ui small centered circular image" src="https://semantic-ui.com/images/wireframe/square-image.png">
-            <div class="ui center aligned basic segment">
-                UNISEX LINE<br><br>
-                $70.00
-            </div>
-        </div>
-
-    </div><!-- End second row -->
-
-
-</div><!-- End grid of two rows -->
-        
-
-
 
 
 
