--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -13,9 +13,7 @@
         <link rel="stylesheet" href="{% static 'css/ade.css' %}">
     </head>
 
-    <body class="pushable"> 
-
-        <!-- Navigation -->
+    <body> 
         <div class="ui sidebar vertical left inverted menu">
             <a class="item"> Home </a>
             <div class="item">
@@ -26,18 +24,20 @@
                     <a class="item"> Unisex Line </a>
                 </div>
             </div>
+            
             <a class="item"> About </a>
             <a class="item"> Contact </a>
             <a class="item"> Terms & Conditions </a>
             <a class="item"> Refund Policy </a>
             <a class="item"> Privacy Statement </a>
-        
+                        
         </div>
         
-        <div class="ui inverted icon top fixed menu" style="background-color: #000">
-            <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
-            <h1 class="center-text white">ADE LUXURY WEAR</h1>
-        </div>
+        <div class="pusher">
+            <div class="ui inverted top attached demo icon menu" style="background-color: #000">
+                <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
+                <img class="ui centered image" src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;">
+            </div>
 
         <!-- End Navigation -->
 
