put pictures in

--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -8,34 +8,36 @@
 
 <div class="ui bottom attached ">
         <!-- Carousel -->
+        <div class="container black-bg" >
         <div class="main-carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
             <div class="carousel-cell">
-                <img src="https://wallpapercave.com/wp/T6yypye.jpg" alt="orange tree" />
+                <img src="{% static 'img/banner-pic5.png' %}" alt="product image" style="height: 700px"/>
                 
-                <div class="carousel-content">
+               <!-- <div class="carousel-content">
                     <h1>Experience the way it truly feels to look like royalty. </h1>
                     <button class="ui huge inverted standard button" style="margin-right: auto; margin-left: auto">SHOP NOW</button>
-                </div>
+                </div>-->
             </div>
 
             <div class="carousel-cell">
-                <img src="https://www.wallpaperup.com/uploads/wallpapers/2014/01/02/213088/5642d8929f9aeca4c83c6808dbc75a42.jpg" alt="submerged" />
+                <img src="{% static 'img/banner-pic4.JPEG' %}" alt="banner img" style="height: 700px" />
 
-                <div class="carousel-content">
+               <!-- <div class="carousel-content">
                     <button class="ui huge inverted standard button">SHOP NOW</button>                
-                </div>
+                </div>-->
             </div>
 
             <div class="carousel-cell">
-                <img src="https://coolbackgrounds.io/images/backgrounds/compute-83062381.png"  alt="look-out" />
+                <img src="{% static 'img/banner-pic3.JPEG' %}"  alt="banner img" style="height: 700px" />
                 
-                <div class="carousel-content">
+                <!--<div class="carousel-content">
                     <h1>SEE LIKE ROYALTY, FEEL LIKE ROYALTY</h1>
                     <button class="ui huge inverted standard button">SHOP NOW</button>
-                </div>
+                </div>-->
             </div>
             
         </div>
+    </div>
         <!-- End carousel -->
     
         <div class="ui container">
@@ -83,7 +85,8 @@
 
         <div class="ui grid container black-bg" style="margin-bottom:50px">
             <div class="ten wide column">
-                <img class="ui huge image padded-img" src="https://semantic-ui.com/images/wireframe/image.png">
+                <!--<img class="ui huge image padded-img" src="https://semantic-ui.com/images/wireframe/image.png">-->
+                <img class="ui huge image padded-img" src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ D71A5A56-4ED3-43EF-A2E5-E1E72AF6437D.JPEG' %}">
             </div>
             <div class="six wide column middle aligned">
                 <h3 class="white" style="margin-right: auto; margin-left: auto;">SHOP OUR AMAZING STYLES TODAY</h3>
