--- a/adeluxuryeyewear/ade/static/css/ade.css
+++ b/adeluxuryeyewear/ade/static/css/ade.css
@@ -1,19 +1,23 @@
 
  .main-carousel{
-     width: 100%;
-     margin-bottom: 100px;
+     
+     margin-bottom:100px;
  }
  
- .main-carousel img {
+ /*.main-carousel img {
     display: block;
     width:100%;
-    height: 700px;
- }
+    height: 800px;
+ }*/
 
  .carousel-cell{
-    display: block;
+    /*display: block;*/
     width:100%;
-    height: 700px;
+    height:700px;
+    /* center images in cells with flexbox */
+    display: flex;
+    align-items: center;
+    justify-content: center;
  }
 
 
